<resources>
    <string name="app_name">SocialX</string>
    <string name="Forgot_Password"><u>Forgot Password</u></string>
    <string name="register"><u>Register Now</u></string>
    <string name="sign_in"><u>SIGN IN</u></string>
    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="button_register">REGISTER</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="i_agree_with_term_and_conditions">I agree with term and conditions</string>
    <string name="password_hint">*******</string>
    <string name="password">password</string>
    <string name="_123456789">123456789</string>
    <string name="contact_no">Contact no</string>
    <string name="jhondoe_gmail_com">jhondoe@gmail.com</string>
    <string name="email">Email</string>
    <string name="jone_doe">Jone Doe</string>
    <string name="name">Name</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="enter_your_email_address_n_to_provide_password_reset_link">Enter your email address \n to provide password reset link</string>
    <string name="sign_in_into_your_account">SIGN IN INTO YOUR ACCOUNT</string>
    <string name="login_with">Login with</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="_22_hours_ago">22 hours ago</string>
    <string name="bbc_news">BBC News</string>
    <string name="description_of_actual_new_goes_here">Description of actual new goes here</string>
    <string name="news_title_goes_here">News Title goes here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>